--- a/index.html
+++ b/index.html
@@ -1,33 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Huddle landing page with single introductory section</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>
+      Frontend Mentor | Huddle landing page with single introductory section
+    </title>
 
-  Build The Community Your Fans Will Love
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap");
+      body {
+        font-family: "Open Sans", sans-serif;
+        background-image: url("./images/bg-desktop.svg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-color: hsl(257, 40%, 49%);
+        color: white;
+      }
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        margin: 0;
+        font-family: "Poppins", sans-serif;
+      }
+      h1 {
+        font-size: 3rem;
+        width: 80%;
+      }
+      p {
+        font-family: "Open Sans", sans-serif;
+        font-size: 1.2rem;
+        font-weight: 400;
+      }
+      img {
+        max-width: 100%;
+      }
+      header {
+        padding: 3rem 5vw;
+      }
+      main {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+        gap: 1vw;
+        place-items: center;
+      }
+      .sm {
+        position: absolute;
+        display: flex;
+        width: 10%;
+        justify-content: space-evenly;
+        /* margin: 1rem 0; */
+        bottom: 2rem;
+        right: 2rem;
+      }
+      i {
+        text-align: center;
+        font-size: 1.9rem;
+        height: 1em;
+        width: 1.6em;
+        border: 1px solid white;
+        border-radius: 50px;
+        padding: 0.3em 0;
+      }
+      @media screen and (min-width: 50rem) {
+        .text {
+          width: 80%;
+          /* margin-right: 10%; */
+        }
+        main {
+          padding: 2rem;
+        }
+        p {
+          padding: 10px 0;
+        }
+        main > img {
+          justify-self: flex-end;
+          /* margin-left: 10%; */
+          width: 90%;
+        }
+      }
+      @media screen and (max-width: 50rem) {
+        * {
+          text-align: center;
+        }
+        h1 {
+          font-size: 2rem;
+          width: 80%;
+          margin: 0 auto;
+        }
+        p {
+          font-size: 1rem;
+        }
+        .text {
+          width: 90%;
+        }
+        img {
+          width: 80%;
+        }
+        .logo {
+          width: 40%;
+          padding: 0;
+        }
+        header {
+          padding: 0;
+          padding-bottom: 3rem;
+        }
+        body {
+          background-image: url("./images/bg-mobile.svg");
+          background-size: contain;
+        }
+        .sm {
+          /* position: absolute; */
+          width: 100%;
+          right: 0;
+          justify-content: center;
+          gap: 5vw;
+        }
+        i {
+          font-size: 1.5rem;
+        }
+      }
+      button {
+        width: 35%;
+        font-size: 1.3rem;
+        padding: 1em;
+        border: none;
+        background-color: white;
+        color: hsl(257, 40%, 49%);
+        border-radius: 50px;
+        box-shadow: 0 10px 10px hsla(0, 0%, 0%, 0.3);
+      }
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
-
-  Register
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+      footer {
+        position: absolute;
+        bottom: 0;
+      }
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 100%, 82%);
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <div class="logo"><img src="./images/logo.svg" alt="Logo" /></div>
+    </header>
+    <main>
+      <img src="./images/illustration-mockups.svg" alt="App mockup wireframe" />
+      <div class="text">
+        <h1>Build The Community Your Fans Will Love</h1>
+        <p>
+          Huddle re-imagines the way we build communities. You have a voice, but
+          so does your audience. Create connections with your users as you
+          engage in genuine discussion.
+        </p>
+        <button>Register</button>
+      </div>
+    </main>
+    <section class="sm">
+      <i class="fab fa-facebook"></i>
+      <i class="fab fa-twitter"></i>
+    </section>
+    <footer>
+      <p class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Arjun</a>.
+      </p>
+    </footer>
+    <script
+      src="https://kit.fontawesome.com/50eadab3bd.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
